app/src/Home.css
/* ... */
.chart-creation-steps {
  display: grid;
  grid-template-columns: 1fr 24px 1fr 24px 1fr 24px 1fr;
  justify-content: center;
  gap: 20px;
  padding: 40px;
  padding-top: 20px;
  position: relative;
}

.chart-creation-step {
  display: flex;
  flex-direction: column;
  z-index: 1;
  align-items: center;
  text-align: center;
  gap: 10px;
}

.chart-creation-step-icon {
  font-size: 45px;
}

.chart-creation-step-title {
  -webkit-line-clamp: 1;
  overflow: hidden;
  font-size: 1.7rem;
  font-weight: 600;
  -webkit-box-orient: vertical;
  line-height: 1.2em;
  display: -webkit-box;
  justify-self: center;
  text-align: center;
  align-self: center;
  justify-content: center;
  align-items: center;
}

.chart-creation-step-icon-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  margin-bottom: 10px;
}

.chart-creation-step-arrow {
  align-self: center;
}

.chart-creation-step-description {
  font-size: 1.3rem;
}

.chart-creation-step-title,
.mobile-chart-creation-step-title {
  font-weight: 600;
}

.mobile-chart-creation-steps {
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  width: 100%;
  overflow: hidden;
  position: relative;
  gap: 40px;
  padding: 40px;
}

.mobile-chart-creation-step {
  display: flex;
  width: 100%;
  align-items: center;
  flex-direction: row;
  gap: 40px;
}

.mobilie-chart-creation-step-text-container {
  display: flex;
  flex-direction: row;
}

.mobile-chart-creation-step-icon-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  z-index: 1;
}

.mobile-chart-creation-step-divider {
  width: 80%;
  margin: 10px;
}

.mobile-chart-creation-step-icon {
  width: 100px;
}

.mobile-chart-creation-step-title {
  text-align: left;
}

.mobile-chart-creation-step-icon {
  font-size: 45px;
}

.mobile-chart-creation-steps-line {
  position: absolute;
  top: 15%;
  left: 90px;
  bottom: 15%;
  width: 4px;
  z-index: 0;
}

.upcoming-workshops-section {
  display: flex;
  flex-direction: column;
  width: 18vw;
  padding-left: 15px;
  padding-right: 15px;
  max-height: inherit;
  max-height: -webkit-fill-available;
  min-height: 0;
  align-self: center;
  overflow: hidden;
  grid-column: 3;
  grid-row: 1 / span 2;
}

/* upcoming workshop */
.upcoming-workshop-image {
  grid-area: "img";
  border-radius: 20px;
  width: 100%;
  height: 100%;
  margin-top: 10px;
}

.scroll_bar {
  height: 100%;
  overflow-y: auto;
}

.upcoming-workshop-title {
  position: sticky;
  font-size: 1.5em;
  white-space: nowrap;
  margin-bottom: 10px;
  margin-top: 20px;
  line-height: 25.74px;
  font-weight: 600;
  letter-spacing: 1%;
  align-content: center;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: center;
}

.upcoming-workshop-subtitle {
  font-size: 1.4rem;
  font-weight: 600;
}

.upcoming-workshop-date {
  font-size: 0.8em;
  font-weight: 400;
  text-align: left;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

.upcoming-workshop-description {
  padding-right: 15px;
  font-size: 0.8rem;
  line-height: 15.2px;
  letter-spacing: 1%;
  font-weight: 300;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.upcoming-workshop-pd {
  margin-top: 10px;
  margin-bottom: 10px;
  line-height: 1;
  font-size: 0.75em;
  font-style: italic;
  text-align: right;
  font-weight: 400;
  padding-right: 15px;
}
/* end of upcoming workshop */

/* chart creation steps css */
@media screen and (max-width: 1425px) {
  .chart-creation-steps {
    gap: 40px;
  }

  .chart-creation-step-title {
    -webkit-line-clamp: 2;
    font-size: 1.75rem;
  }

  .chart-creation-step-description {
    font-size: 1.2rem;
  }

  .chart-creation-step-icon {
    height: 47.5px;
    width: 47.5px;
  }
}

@media screen and (max-width: 1275px) {
  .chart-creation-step-title {
    font-size: 1.5rem;
  }

  .chart-creation-step-description {
    font-size: 1rem;
  }

  .chart-creation-step-icon {
    font-size: 35px;
  }
}

@media screen and (max-width: 1150px) {
  .chart-creation-steps {
    gap: 20px;
  }

  .chart-creation-step-description {
    font-size: 1rem;
  }

  .chart-creation-step-icon {
    font-size: 30px;
  }
}

@media screen and (max-width: 900px) {
  .chart-creation-steps {
    gap: 40px;
    padding: 20px;
  }

  .chart-creation-step {
    padding: 20px;
  }

  .chart-creation-step-title {
    font-size: 1.5rem;
  }

  .chart-creation-step-description {
    font-size: 1.25rem;
  }

  .chart-creation-step-icon {
    font-size: 40px;
  }
}

@media screen and (max-width: 600px) {
  .mobile-chart-creation-steps {
    padding: 20px;
  }

  .mobile-chart-creation-steps-line {
    left: 70px;
  }

  .chart-creation-title {
    font-size: 2.5rem;
  }

  .mobile-chart-creation-step-title {
    font-size: 1.5rem;
  }

  .mobile-chart-creation-step-description {
    font-size: 1rem;
  }
}

/* cards css */
@media screen and (max-width: 1350px) {
  .landing-page-cards {
    gap: 40px;
  }

  .landing-page-card {
    width: 350px;
    height: 450px;
  }

  .landing-page-card-title {
    font-size: 1.6rem;
  }

  .landing-page-card-description {
    font-size: 1.1rem;
  }

  .landing-page-card-description {
    height: 230px;
  }
}

@media screen and (max-width: 1130px) {
  .landing-page-card {
    width: 300px;
    height: 400px;
  }

  .landing-page-card-title {
    font-size: 1.3rem;
  }

  .landing-page-card-description {
    font-size: 0.9rem;
    height: 200px;
  }

  .landing-page-card-see-more-text {
    font-size: 1rem;
  }

  .landing-page-card-arrow {
    width: 20px;
    height: 20px;
  }

  .landing-page-card-icon-component {
    font-size: 40px;
  }
}

@media screen and (max-width: 1000px) {
  .landing-page-cards {
    gap: 10px;
  }
}
/* ... */

